Backend Parte 8: Creación del Modelo de Mensaje
