# backend/src/controllers/Mensaje/NotificacionesController.js
@@ -1,0 +1,4 @@
+exports.enviarNotificacionNuevoMensaje = (destinatario) => {
+    // Aquí iría la lógica de notificación (puede ser por email, socket.io, etc.)
+    console.log(`Notificación enviada a ${destinatario}`);
+};
